--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant Challenge</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -25,14 +25,14 @@
       <p>
         <a href="photo.html"
           ><img
-            src="images/croissant_unsplash.jpg"
+            src="/images/croissant_unsplash.jpg"
             class="croissant-photo-homepage"
         /></a>
       </p>
       <footer>
-        <a href="index.html">Homepage</a>
-        <a href="photo.html">Photo</a>
-        <a href="contact.html">Contact</a>
+        <a href="/index.html">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
       </footer>
     </div>
   </body>
