--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -16,9 +16,9 @@
         /></a>
       </p>
       <footer>
-        <a href="index.html">Homepage</a>
-        <a href="photo.html">Photo</a>
-        <a href="contact.html">Contact</a>
+        <a href="/index.html">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
       </footer>
     </div>
   </body>
