--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant Challenge</title>
+    <title>History of Croissants - croissants.co</title>
+    <meta
+      name="description"
+      content="Learn more about the history of croissant on croissant.co."
+    />
+
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>🥐 Croissant</h1>
+      <h1>🥐 History of Croissants</h1>
       <p>
         <a href="photo.html"
           ><img
             src="/images/croissant_unsplash.jpg"
             class="croissant-photo-homepage"
+            alt="plain croissant and almond croissant"
         /></a>
       </p>
       <p>
@@ -26,7 +32,7 @@
         laminating. The process results in a layered, flaky texture, similar to
         a puff pastry. (Source:
         <a href="https://en.wikipedia.org/wiki/Croissant" target="_blank"
-          >Wikipedia</a
+          >Croissants (Wikipedia)</a
         >)
       </p>
       <footer>
