--- a/photo.html
+++ b/photo.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <title>Croissant Photo Gallery - croissant.co</title>
+    <meta
+      name="description"
+      content="See a variety of croissants in our online photo gallery!"
+    />
+
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>🥐 A picture of a croissant</h1>
+      <h1>🥐 Croissant Photo Gallery</h1>
       <p>
         <a href="https://unsplash.com/photos/123wTsGP4LU" target="_blank"
-          ><img src="images/croissant_unsplash.jpg" class="croissant-photo"
+          ><img
+            src="images/croissant_unsplash.jpg"
+            class="croissant-photo"
+            alt="plain croissant and almond croissant"
         /></a>
       </p>
       <footer>
