--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact Us - croissant.co</title>
+    <meta
+      name="description"
+      content="Contact us for more information about the history of croissants."
+    />
+
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
