Updated meta descriptions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>History of Croissants - croissants.co</title>
     <meta
       name="description"
-      content="Learn more about the history of croissant on croissant.co."
+      content="Croissant.co is your new go-to site for learning about the history of the croissant."
     />
 
     <link rel="stylesheet" href="/css/styles.css" />
