--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,7 @@
     <title>Croissant Photo Gallery - croissant.co</title>
     <meta
       name="description"
-      content="See a variety of croissants in our online photo gallery!"
+      content="Our online gallery includes images of a variety of croissants from the original version to almond croissants!"
     />
 
     <link rel="stylesheet" href="/css/styles.css" />
