--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact Us - croissant.co</title>
     <meta
       name="description"
-      content="Contact us for more information about the history of croissants."
+      content="For more information about the history of croissants or business inquiries, contact us here today."
     />
 
     <link rel="stylesheet" href="/css/styles.css" />
