--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - croissant.co</title>
+    <title>Business Inquiries and Questions - croissant.co</title>
     <meta
       name="description"
       content="For more information about the history of croissants or business inquiries, contact us here today."
