--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
         in succession, then rolled into a thin sheet, in a technique called
         laminating. The process results in a layered, flaky texture, similar to
         a puff pastry. (Source:
-        <a href="https://en.wikipedia.org/wiki/Croissant" target="_blank"
-          >Croissants (Wikipedia)</a
+        <a
+          href="https://en.wikipedia.org/wiki/Croissant"
+          target="_blank"
+          title="Croissant Wikipedia page"
+          >Croissants - Wikipedia</a
         >)
       </p>
       <footer>
-        <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/index.html" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant Photo Gallery">Photo</a>
+        <a href="/contact.html" title="Contact croissant.co">Contact</a>
       </footer>
     </div>
   </body>
