--- a/photo.html
+++ b/photo.html
@@ -24,9 +24,9 @@
         /></a>
       </p>
       <footer>
-        <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/index.html" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant Photo Gallery">Photo</a>
+        <a href="/contact.html" title="Contact croissant.co">Contact</a>
       </footer>
     </div>
   </body>
