--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,15 @@
       <h1>🥐 Contact Us</h1>
       <p>
         To contact croissant.com, please email us at
-        <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more
-        info.
+        <a href="mailto:hello@croissant.com" title="Contact us by email"
+          >hello@croissant.com</a
+        >
+        for more info.
       </p>
       <footer>
-        <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/index.html" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant Photo Gallery">Photo</a>
+        <a href="/contact.html" title="Contact croissant.co">Contact</a>
       </footer>
     </div>
   </body>
