--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             src="/images/croissant_unsplash.jpg"
             class="croissant-photo-homepage"
             alt="plain croissant and almond croissant"
+            title="Plain and Almond Croissants"
         /></a>
       </p>
       <p>
