--- a/photo.html
+++ b/photo.html
@@ -21,6 +21,7 @@
             src="images/croissant_unsplash.jpg"
             class="croissant-photo"
             alt="plain croissant and almond croissant"
+            title="Plain and Almond Croissants"
         /></a>
       </p>
       <footer>
